--- a/views/list.ejs
+++ b/views/list.ejs
@@ -26,4 +26,15 @@
       </form>
   </div>
 
+  <div id="cl-div">
+
+    <form action="/cl" method="post">
+      <h2>Create A New ToDo List </h2>
+      <input id="cl-input" name="ln" type="text" placeholder="Type here">
+      <button id="cl-btn"  type="submit">Create</button>
+      <button id="cl-btn"  type="submit">Open List</button>
+    </form>
+
+  </div>
+
 <%- include("footer") -%>
